tests/snapshot/inputs/errors/caller_contract_violation.ncl
std.array.map std.function.id 'not-an-array

